[package]
name = "WindGeneration"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"            # .env file processing.
egui = "0.29.1"
eframe = { version = "0.29.1", default-features = false, features = [
    "default_fonts",          # Embed the default egui fonts.
    "glow",                   # Use the glow rendering backend. Alternative: "wgpu".
] }
reqwest = { version = "0.12.9", features = ["blocking"] }
serde_json = "1.0.132"
thiserror = "2.0.3"