[package]
name = "Lab2"
version = "0.0.1"
authors = ["Alex Kovalov <alexkovalevkpi@gmail.com>"]
edition = "2024"
rust-version = "1.85"

[dependencies]
chrono = "0.4.40"             # Logging purposes.
crossbeam = "0.8.4"                 # Channels
egui = "0.31.0"               # GUI Library.
eframe = { version = "0.31.0", default-features = false, features = [
    "default_fonts",          # Embed the default egui fonts.
    "glow",                   # Use the glow rendering backend. Alternative: "wgpu".
] }
fern = "0.7.1"                # Logger.
log = "0.4.26"                # Logging facade.
nalgebra = "0.33.2"           # Matrices, linear algebra.
rand = "0.9.0"                # Random
rfd = "0.15.2"                # File Dialogs.
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"          # Custom enum errors.