[package]
name = "Lab2"
version = "0.0.1"
authors = ["Oleksandr Kovalov <kovalov.o.o.-im51mn@edu.kpi.ua>"]

edition = "2024"
rust-version = "1.94"

categories = ["science"]

readme = "../README.md"
license = "MIT"
repository = "https://github.com/xairaven/KPI-MTPP"

[lints]
workspace = true

[dependencies]
chrono = "0.4.44"
crossbeam = "0.8.4"
clap = { version = "4.6.0", features = ["derive"] }
fern = "0.7.1"
image = "0.25.10"
log = "0.4.29"
rand = "0.10.0"
rayon = "1.11.0"
thiserror = "2.0.18"
